# Attendance_check

./: CMakeLists.txt  CMakePresets.json  attendance.cpp  attendance.db-shm  attendance.db-wal  attendance.h  auth_manager.cpp  auth_manager.h  events_dao.cpp  events_dao.h  main.cpp  user_dao.cpp  user_dao.h
